--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.21.2
-pandas==1.3.3
-requests==2.26.0
-yfinance==0.1.63
-python-telegram-bot==13.7
+numpy
+pandas
+requests
+yfinance
+argparse
+finvizfinance
