fix: menu and alert on demand

--- a/data/crypto.yaml
+++ b/data/crypto.yaml
@@ -10,4 +10,17 @@ symbols:
   - DOTUSDT
   - DOGEUSDT
   - AVAXUSDT
+  - ARBUSDT
+  - TIAUSDT
+  - LDOUSDT
+  - MATICUSDT
+  - SHIBUSDT
+  - UNIUSDT
+  - LTCUSDT
+  - NEARUSDT
+  - LINKUSDT
+  - ALGOUSDT
+  - FILUSDT
+  - EGLDUSDT
+  - ETCUSDT  
  
