--- a/data/stocks.yaml
+++ b/data/stocks.yaml
@@ -141,7 +141,6 @@ symbols:
   - WMT
   - DG
   - DLTR
-  - COST
   - TJX
   - ROST
   - BBY
@@ -212,3 +211,27 @@ symbols:
   - INTU
   - EBAY
   - TDG
+  - PVH
+  - ADM
+  - ABNB
+  - AXP
+  - CF
+  - DUOL
+  - GCT
+  - LEN
+  - MNST
+  - NTR
+  - SPOT
+  - TNK
+  - AWK
+  - BA
+  - GD
+  - GOLD
+  - JKHY
+  - MDLZ
+  - MS
+  - MU
+
+
+
+
