chore: small fixes

--- a/data/stocks.yaml
+++ b/data/stocks.yaml
@@ -231,6 +231,22 @@ symbols:
   - MDLZ
   - MS
   - MU
+  - BCP.LS
+  - JMT.LS
+  - NOS.LS
+  - GALP.LS
+  - CTT.LS
+  - COR.LS
+  - EDP.LS
+  - EDPR.LS
+  - NVG.LS
+  - CCJ
+  - AMRK
+  - RDDT
+  - DJT
+  - AMC
+  - GME
+  
 
 
 
