chore: regular update

--- a/data/stocks.yaml
+++ b/data/stocks.yaml
@@ -150,7 +150,6 @@ symbols:
   - AAP
   - ULTA
   - LULU
-  - RH
   - CROX
   - EXPE
   - ZIM
@@ -250,6 +249,7 @@ symbols:
   - S
   - OKTA
   - ZS
+  - AFRM
   
   
 
